--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
             </div>
             <div class="products">
                 <div class="product">
-                    <img src="./images/icon-list.svg" alt="">
+                    <img src="/icon-list.svg" alt="">
                     <p>Product discovery and building what matters</p>
                 </div>
                 <div class="product">
-                    <img src="./images/icon-list.svg" alt="">
+                    <img src="./icon-list.svg" alt="">
                     <p>Measuring to ensure updates are a success</p>
                 </div>
                 <div class="product">
-                    <img src="./images/icon-list.svg" alt="">
+                    <img src="/icon-list.svg" alt="">
                     <p>And much more!</p>
                 </div>
             </div>
@@ -42,7 +42,7 @@
         </div>
 
         <div  id="Second-container" class="img-container">
-            <img src="./images/illustration-sign-up-desktop.svg" alt="" height="90%">
+            <img src="./illustration-sign-up-desktop.svg" alt="" height="90%">
             <h1>Thanks for subscribing!</h1>
             <p>A confirmation email has been sent to <span id="Gmail"></span> 
             Please open it and click the button inside to confirm your subscription.</p>
